package client.classes.unused;

public class Creature extends Animal{
    public Creature(String name){
        super(name,false);
    }
}
