package client.classes.unused;

import common.StoneDurability;

public class Stalagmite extends  GeologicalFormation{
    public Stalagmite(String type, StoneDurability durability){
        super(type,durability);
    }
}
