package common;

public enum FossilType {
    INTACT_FOSSIL,
    HEAD,
    WING,
    TENTACLE,
    PIPES,
    STONES,
    TRASH
}
