package common;

public enum PeriodAge {
    EOCENOS,
    CRETATIOUS,
    MIOCENOS,
    JURASSIC,
    UNSPECIFIED
}
