package common;
public enum Stat{
    HP,
    INTELLIGENCE,
    LUCK,
    DAMAGE,
    SANITY,
}

