package org.example.interfaces;

public interface Excavatable {
    void getExcavated();
}
