package org.example.interfaces;

public interface Resembleable {
    void resemble(String what);
}
